SonarQube setup. Resolved some code smells.