@@ -15,6 +15,29 @@
 	<description>Projekat iz predmeta KTS-NVT</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+		<sonar.projectKey>kts-nvt-backend</sonar.projectKey>
+		<sonar.sources>src/main/java</sonar.sources>
+		<sonar.tests>src/test/java</sonar.tests>
+		<sonar.language>java</sonar.language>
+		<sonar.binaries>target/classes</sonar.binaries>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.junit.reportsPath>target/surefire-reports</sonar.junit.reportsPath>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+<!--		<sonar.coverage.jacoco.xmlReportPaths>-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.AdminLayoutPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.BartenderPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.ChangePasswordPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.ChefPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.EmployeesPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.LoginPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.SectionsManagePageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.SuperUsersPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.UpdateProfilePageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.WaiterPageTest.xml,-->
+<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.integration.controller.EmployeeControllerTest.xml-->
+
+<!--		</sonar.coverage.jacoco.xmlReportPaths>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -82,10 +105,6 @@
             <version>2.0.1.Final</version>
         </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
@@ -98,7 +117,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-<!--			<scope>test</scope>-->
 		</dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -133,7 +151,65 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+<!--					<testFailureIgnore>true</testFailureIgnore>-->
+					<forkCount>1</forkCount>
+					<reuseForks>true</reuseForks>
+<!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.7.0.1746</version>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>coverage</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>default-report</id>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+<!--							<execution>-->
+<!--								<id>default-check</id>-->
+<!--								<goals>-->
+<!--									<goal>check</goal>-->
+<!--								</goals>-->
+<!--							</execution>-->
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
